<resources>
    <string name="app_name">Pizza</string>
    <string name="facebook_app_id">321845908485447</string>
    <string name="fb_login_protocol_scheme">fb321845908485447</string>
    <string name="FACEBOOK_APP_ID">321845908485447</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">88ac0ec8d077e8d5397f472e2a0064dd</string>
    <string name="greeting">Tiệm Bánh Nghĩa\n Xin Chào!!</string>
    <string name="address">Địa chỉ: Số 8 ngõ Thịnh Hào 1, Tôn Đức Thắng, Hà Nội</string>
    <string name="letgo">Đi nào</string>

    <string name="title_activity_home">Danh sách Khách Hàng</string>
    <string name="title_activity_product">Danh sách sản phẩm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Tìm kiếm</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_send">Send</string>
    <string name="login_by_phone">Đăng nhập bằng số điện thoại</string>
    <string name="menu_customer">Khách Hàng</string>
    <string name="menu_product">Sản Phẩm</string>
    <string name="menu_category">Danh Mục</string>
    <string name="sample_name">Sample name</string>
    <string name="address_label">Địa chỉ:</string>
    <string name="phone_label">Số điện thoại:</string>
    <string name="birthday_label">Ngày Sinh:</string>
    <string name="label_nap_tien">Nhập vào số tiền cần nạp:</string>
    <string name="nap_tien">Nạp Tiền</string>
    <string name="so_du">Số dư :</string>
</resources>
