<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_name"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/llLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCustomerName"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_label"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_label"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so_du"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCustomerName"
        android:layout_margin="16dp"
        android:layout_toRightOf="@id/llLabel"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@id/llLabel"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cash_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_nap_tien"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="80"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nap_tien"/>
    </LinearLayout>

</RelativeLayout>