<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".login.MainActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:layout_above="@id/rlGoFrame"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rlGoFrame"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGo"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_right_arrow"
            />
        <TextView
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letgo"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_gravity="center"/>
</RelativeLayout>